--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "start": "eleventy --serve"
   },
   "dependencies": {
-    "@11ty/eleventy": "^2.0.0"
+    "@11ty/eleventy": "^2.0.0",
+    "markdown-it-anchor": "^8.6.7"
   },
   "engines": {
     "node": "14.x"
   },
   "license": "MIT",
   "devDependencies": {
-    "markdown-it-anchor": "^8.6.7"
   }
 }
