--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "markdown-it-anchor": "^8.6.7"
   },
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   },
   "license": "MIT",
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
