--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.0",
+    "luxon": "^3.4.3",
     "markdown-it-anchor": "^8.6.7"
   },
   "engines": {
     "node": "16.x"
   },
-  "license": "MIT",
-  "devDependencies": {}
+  "license": "MIT"
 }
