--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.0",
+    "eleventy-plugin-toc": "^1.1.5",
     "luxon": "^3.4.3",
     "markdown-it-anchor": "^8.6.7"
   },
