--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.0",
+    "@11ty/eleventy-fetch": "^4.0.0",
+    "dotenv": "^16.3.1",
     "eleventy-plugin-toc": "^1.1.5",
     "luxon": "^3.4.3",
     "markdown-it-anchor": "^8.6.7"
