--- a/.github/workflows/eleventy.yml
+++ b/.github/workflows/eleventy.yml
@@ -54,6 +54,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
+        env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          GOOGLE_SHEET_ID: ${{ vars.GOOGLE_SHEET_ID }}
+          GOOGLE_SHEET_NAME: ${{ vars.GOOGLE_SHEET_NAME }}
         run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
