--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@11ty/eleventy-fetch": "^4.0.0",
     "dotenv": "^16.3.1",
     "eleventy-plugin-toc": "^1.1.5",
+    "js-yaml": "^4.1.0",
     "luxon": "^3.4.3",
     "markdown-it-anchor": "^8.6.7"
   },
