--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-fetch": "^5.0.1",
+    "@11ty/eleventy-plugin-rss": "^2.0.2",
     "dotenv": "^16.4.4",
     "eleventy-plugin-toc": "^1.1.5",
     "js-yaml": "^4.1.0",
