--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,3 +21,17 @@ collections:
       - {label: "Actualitzat", name: "actualitzat", widget: "datetime", format: "YYYY-MM-DD", date_format: "YYYY-MM-DD"}
       - {label: "Versió", name: "versio", widget: "number", default: 1, value_type: "int"}
       - {label: "Contingut", name: "body", widget: "markdown"}
+
+  - name: "noticia"
+    label: "Notícia curs 24-25"
+    folder: "src/noticies/24-25"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Tipus", name: "layout", widget: "hidden", default: "layout/default.njk"}
+      - {label: "Tags", name: "tags", widget: "hidden", default: "post"}
+      - {label: "Curs", name: "curs", widget: "hidden", default: "24-25"}
+      - {label: "Títol", name: "titol", widget: "string"}
+      - {label: "Data", name: "date", widget: "datetime", format: "YYYY-MM-DD", date_format: "YYYY-MM-DD"}
+      - {label: "Versió", name: "versio", widget: "number", default: 1, value_type: "int"}
+      - {label: "Contingut", name: "body", widget: "markdown"}
