Actualització de correu de festes

--- a/src/_data/comissions.yaml
+++ b/src/_data/comissions.yaml
@@ -65,7 +65,7 @@
   nom: Cultura i festes
   email:
     - afaculturasantateresa@gmail.com
-    - afafestessantateresa@gmail.com
+    - festesstateresa@gmail.com
   icona: 🎼
   descripcio: >
     Organitza cursos i xarrades. També s'encarrega de les festes d'inici de curs, 
