--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@11ty/eleventy-fetch": "^5.0.1",
     "@11ty/eleventy-plugin-rss": "^2.0.2",
     "dotenv": "^17.0.0",
+    "eleventy-plugin-metagen": "^1.8.3",
     "eleventy-plugin-toc": "^1.1.5",
     "js-yaml": "^4.1.0",
     "luxon": "^3.4.4",
