--- a/src/_data/junta.yaml
+++ b/src/_data/junta.yaml
@@ -7,7 +7,7 @@
 - carrec: Vicepresident C. Extraescolars
   nom: Guille Biot
   foto: guille_biot.webp
-- carrec: Representat Consell C. Menjador
+- carrec: Representant Consell C. Menjador
   nom: María Navarro
   foto: maria_navarro.webp
 - carrec: Tresorera
